created raspberry pi version

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,6 +1,7 @@
-FROM centos
+FROM centos:7
 LABEL maintainer="szoke.karcsi@gmail.com"
-RUN dnf update -y && dnf install epel-release -y && dnf install tor -y && dnf clean all
+COPY epel.repo /etc/yum.repos.d
+RUN yum update -y && yum install epel-release -y && yum install tor -y && yum clean all
 RUN echo "SocksPort 0.0.0.0:9050" >> /etc/tor/torrc 
 RUN useradd tor && chown tor:tor /run/tor
 
