--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   tor:
-    image: szokekaroly/tor
+    image: docker.io/szokekaroly/tor:latest
     build:
       context: .
     ports:
